--- a/styles/main.css
+++ b/styles/main.css
@@ -34,3 +34,12 @@ Grey:			#30343f
 	cursor: pointer;
 	background-color: rgba(0,0,0,0.03);
 }
+
+#navSidebar .innovation-type.de-selected {
+	opacity: 0.7;
+	border-color: #c2c2c2;
+}
+#navSidebar .innovation-type.de-selected h4,
+#navSidebar .innovation-type.de-selected p {
+	color: #c2c2c2;
+}
