--- a/styles/main.css
+++ b/styles/main.css
@@ -43,3 +43,18 @@ Grey:			#30343f
 #navSidebar .innovation-type.de-selected p {
 	color: #c2c2c2;
 }
+
+.tooltip {
+	padding: 8px 12px 20px !important;
+	background-color: rgba(64,64,64,0.95) !important;
+	color: #fff !important;
+	min-height: 200px;
+	max-height: 600px;
+	// overflow-y: scroll;
+	height: unset !important;
+}
+.tooltip .title,
+.tooltip p {
+	text-align: left;
+	margin: 12px;
+}
