Add location icon and update tooltip info

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,10 @@ Infrared:		#ff2247
 Grey:			#30343f
 */
 
+#brand-logo {
+	height: 48px;
+}
+
 #addBtn,
 #submitBtn {
 	background-color: #ff2247 !important;
@@ -47,7 +51,6 @@ Grey:			#30343f
 .tooltip {
 	padding: 8px 12px 20px !important;
 	background-color: rgba(64,64,64,0.95) !important;
-	color: #fff !important;
 	min-height: 200px;
 	max-height: 600px;
 	// overflow-y: scroll;
@@ -55,6 +58,16 @@ Grey:			#30343f
 }
 .tooltip .title,
 .tooltip p {
+	color: #fff !important;
 	text-align: left;
 	margin: 12px;
+}
+
+.tooltip .location .location-icon {
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+	margin-right: 6px;
+	position: relative;
+	top: 2px;
 }
